Paragraph spacing fixed and text changed from lorem

--- a/src/contact-us.css
+++ b/src/contact-us.css
@@ -1,7 +1,7 @@
 .contact-us-love-section {
   width: 100%;
   height: 500px;
-  padding: 100px 200px 20px 60px;
+  padding: 80px 200px 40px 60px;
   display: flex;
   gap: 3rem;
   background-color: #ebf0f9;
@@ -44,12 +44,16 @@
 .contact-us-small-text-part {
   display: flex;
   flex-direction: column;
-  padding: 0px 70px;
+  width: 50%;
   gap: 40px;
 }
 
 .contact-us-small-text-part h2 {
   margin-bottom: 12px;
+}
+
+.contact-us-small-text-part p {
+  margin-bottom:6px;
 }
 
 .contact-icons {
